--- a/css/dom.css
+++ b/css/dom.css
@@ -12,9 +12,39 @@ h1 {
 .output {
   font-weight: 700;
 }
-.nameSpaces {
-  display: flex;
-  height: 130px;
-  width: 500px;
-  border: 2px rebeccapurple solid;
+table {
+  border-collapse: collapse;
+  border: 2px solid black;
+}
+caption {
+  font-weight: 700;
+  caption-side: top;
+  padding: 10px;
+}
+thead,
+tfoot {
+  background-color: rgb(162, 238, 238);
+}
+tbody > tr:nth-of-type(even) {
+  background-color: rgb(237 238 242);
+}
+th,
+td {
+  border: 1px solid black;
+  padding: 4px 8px;
+}
+button {
+  background-color: rgb(245, 140, 222);
+  color: rgb(34, 13, 126);
+  font-weight: 600;
+  font-size: 15px;
+  padding: 10px 10px;
+  border-radius: 12px;
+  border: 1px solid black;
+}
+button:hover {
+  background-color: rgb(255, 21, 216);
+  font-weight: 900;
+  padding: 13px 13px;
+  color: rgb(234, 236, 103);
 }
